# lambda-rust-http-geolocation

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.sh  setup.sh  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: commitmsg-conform.yml  deploy.yml  markdown-lint.yml
infra/: main.tf  outputs.tf  variables.tf
src/: main.rs
