[package]
name = "lambda_http_geolocation"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda]
runtime = "provided.al2023"
architecture = "arm64"

[dependencies]
lambda_http = "0.9"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

[features]
default = ["dev-tracing"]
dev-tracing = ["tracing-subscriber"]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
